[gd_scene load_steps=18 format=3 uid="uid://bmolgfd6l5v3x"]

[ext_resource type="Script" path="res://Scenes/Enemies/scout_enemy.gd" id="1_3ffos"]
[ext_resource type="Texture2D" uid="uid://bm2jrfke3map2" path="res://graphics/enemies/scout.png" id="1_83mrv"]
[ext_resource type="Texture2D" uid="uid://dsn2snydr7q8v" path="res://graphics/explosions/explosion_1.png" id="3_b4yt0"]
[ext_resource type="Texture2D" uid="uid://dnvtfnmeiveha" path="res://graphics/decals/white.png" id="3_jrb84"]
[ext_resource type="AudioStream" uid="uid://1wijedbchc4i" path="res://audio/solid_impact.ogg" id="4_nsq6e"]
[ext_resource type="AudioStream" uid="uid://h288aohvl0ja" path="res://audio/explosion.wav" id="4_w50vg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sal8e"]
radius = 60.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hqb25"]
radius = 1160.03

[sub_resource type="Gradient" id="Gradient_aflbp"]
colors = PackedColorArray(0.65098, 0.968627, 0.968627, 0.482353, 0.682353, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_5ddfl"]
gradient = SubResource("Gradient_aflbp")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gs7au"]
particle_flag_disable_z = true
direction = Vector3(50, 0, 0)
spread = 15.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 800.0
initial_velocity_max = 1000.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.5
scale_max = 0.8
color = Color(0.701961, 0, 0.286275, 1)
color_ramp = SubResource("GradientTexture1D_5ddfl")

[sub_resource type="Animation" id="Animation_145nb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}

[sub_resource type="Animation" id="Animation_chnwm"]
resource_name = "new_animation"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Explosion:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "audio"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("explode")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_w50vg")
}],
"times": PackedFloat32Array(0.1)
}
tracks/4/use_blend = true
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_56006"]
_data = {
"RESET": SubResource("Animation_145nb"),
"new_animation": SubResource("Animation_chnwm")
}

[sub_resource type="Gradient" id="Gradient_w5ov0"]
offsets = PackedFloat32Array(0, 0.986301)
colors = PackedColorArray(0.404511, 0.404511, 0.404511, 1, 1, 1, 1, 0.431373)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_6vahj"]
gradient = SubResource("Gradient_w5ov0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_74xvp"]
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 83.71
gravity = Vector3(0, 0, 0)
initial_velocity_min = 30.0
initial_velocity_max = 35.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.5
scale_max = 0.8
color = Color(0.556863, 0.556863, 0.556863, 1)
color_ramp = SubResource("GradientTexture1D_6vahj")
hue_variation_max = 0.15

[node name="Scout enemy" type="CharacterBody2D" groups=["Scouts"]]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_3ffos")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-44, -16)
shape = SubResource("CircleShape2D_sal8e")

[node name="Attack Area" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack Area"]
position = Vector2(-51, -11)
shape = SubResource("CircleShape2D_hqb25")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("1_83mrv")

[node name="AttackPos" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="AttackPos"]
position = Vector2(160, -25)

[node name="GPUParticles2D" type="GPUParticles2D" parent="AttackPos/Marker2D"]
position = Vector2(-117, -28)
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_gs7au")
texture = ExtResource("3_jrb84")
lifetime = 0.15
one_shot = true

[node name="Marker2D2" type="Marker2D" parent="AttackPos"]
position = Vector2(150, -69)

[node name="GPUParticles2D" type="GPUParticles2D" parent="AttackPos/Marker2D2"]
position = Vector2(-96, 58)
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_gs7au")
texture = ExtResource("3_jrb84")
lifetime = 0.15
one_shot = true

[node name="shootCD" type="Timer" parent="."]

[node name="Explosion" type="Sprite2D" parent="."]
visible = false
position = Vector2(-20, -6)
texture = ExtResource("3_b4yt0")
hframes = 8
vframes = 8
frame = 16

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
speed_scale = 1.5
libraries = {
"": SubResource("AnimationLibrary_56006")
}

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_nsq6e")

[node name="explode" type="AudioStreamPlayer2D" parent="."]

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(-84, -17)
rotation = 3.14159
amount = 30
process_material = SubResource("ParticleProcessMaterial_74xvp")
texture = ExtResource("3_jrb84")
randomness = 0.01

[connection signal="body_entered" from="Attack Area" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="Attack Area" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="shootCD" to="." method="_on_shoot_cd_timeout"]
